imprv: Contact name entry: Improve editing flow and fix layout issue
Fixes #12582

--- a/gajim/data/style/gajim.css
+++ b/gajim/data/style/gajim.css
@@ -878,19 +878,6 @@ list.sidebar-switcher .sidebar-row-header {
     color: var(--view-fg-color);
 }
 
-/* ContactInfo / GroupchatDetails */
-#ContactNameEntry:disabled {
-    filter: none;
-    border: none;
-    background-color: transparent;
-    padding: 0px 0px 0px 0px;
-}
-#ContactNameEntry text:disabled {
-    font-size: 2.0rem;
-    font-weight: bold;
-    color: var(--window-fg-color);
-}
-
 /* ManageRoster */
 #ManageRoster listview header {
     font-weight: bold;
